# harper

./: justfile
harper-asciidoc/: Cargo.toml
harper-brill/: Cargo.toml
harper-comments/: Cargo.toml
harper-comments/src/: masker.rs
harper-comments/tests/: language_support.rs
harper-comments/tests/language_support_sources/: issue_962.sh
harper-core/: Cargo.toml  default_config.json  dictionary.dict  irregular_nouns.json
harper-core/src/linting/: close_tight_knit.rs  hereby.rs  mod.rs
harper-core/src/linting/lint_group/: mod.rs
harper-core/src/linting/mass_nouns/: mass_plurals.rs  mod.rs  noun_countability.rs
harper-core/src/linting/phrase_set_corrections/: mod.rs  tests.rs
harper-core/src/linting/weir_rules/: MoreThanMeetsTheEye.weir  The.weir
harper-core/tests/text/tagged/: Alice's Adventures in Wonderland.md  Difficult sentences.md  The Great Gatsby.md
harper-html/: Cargo.toml
harper-ink/: Cargo.toml
harper-jjdescription/: Cargo.toml
harper-literate-haskell/: Cargo.toml
harper-ls/: Cargo.toml
harper-pos-utils/: Cargo.toml
harper-python/: Cargo.toml
harper-stats/: Cargo.toml
harper-tex/: Cargo.toml
harper-thesaurus/: Cargo.toml
harper-tree-sitter/: Cargo.toml
harper-typst/: Cargo.toml
