[package]
name = "harper-core"
version = "2.1.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
blanket = "0.4.0"
fst = "0.4.7"
hashbrown = { version = "0.16.1", features = ["serde"] }
is-macro = "0.3.6"
itertools = "0.14.0"
ordered-float = { version = "5.3.0", features = ["serde"] }
paste = "1.0.14"
pulldown-cmark = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = { version = "1.15.1", features = ["serde"] }
thiserror = "2.0.18"
unicode-blocks = "0.1.9"
unicode-script = "0.5.8"
unicode-width = "0.2.2"
levenshtein_automata = { version = "0.2.1", features = ["fst_automaton"] }
cached = "0.59.0"
lru = "0.16.3"
foldhash = "0.2.0"
strum_macros = "0.28.0"
strum = "0.28.0"
ammonia = "4.1.2"
harper-brill = { path = "../harper-brill", version = "2.0.0" }
harper-thesaurus = { path = "../harper-thesaurus", version = "2.0.0", optional = true }
bitflags = { version = "2.11.0", features = ["serde"] }
trie-rs = "0.4.2"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
regex = "1.12.3"

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false }
rand = "0.10.1"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
rayon = "1.11.0"

[[bench]]
name = "parse_essay"
harness = false

[[bench]]
name = "spellcheck"
harness = false

[features]
default = ["thesaurus"]
concurrent = []
thesaurus = ["dep:harper-thesaurus"]
