[package]
name = "harper-tex"
version = "2.1.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "2.0.0" }

[dev-dependencies]
paste = "1.0.15"
